<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

        <LinearLayout
            android:id="@+id/linearLayoutLogo"
            android:layout_width="match_parent"
            android:layout_height="350px"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutContadorCalorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutLogo">

            <Button
                android:id="@+id/btnContadorCalorias"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="8dp"
                android:insetRight="8dp"
                android:layout_margin="8dp"
                android:text="@string/labelContadorCalorias"
                style="@style/ButtonPrimary" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCalculoImc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutContadorCalorias">

            <Button
                android:id="@+id/btnCalculoImc"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="8dp"
                android:insetRight="8dp"
                android:layout_margin="8dp"
                android:text="@string/labelCalculoImc"
                style="@style/ButtonPrimary" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutMedidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCalculoImc">

            <Button
                android:id="@+id/btnMedidas"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="8dp"
                android:insetRight="8dp"
                android:layout_margin="8dp"
                android:text="@string/labelMedidasPessoa"
                style="@style/ButtonPrimary" />

        </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutHistoricoMedidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMedidas">

        <Button
            android:id="@+id/btnHistoricoMedidas"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelHistoricoMedidas"
            style="@style/ButtonPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutPesoAvaliacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutHistoricoMedidas">

        <Button
            android:id="@+id/btnPesoAvaliacoes"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelPesoAvaliacoes"
            style="@style/ButtonPrimary" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutOpcaoExercicioDiario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutPesoAvaliacoes">

        <Button
            android:id="@+id/btnOpcaoExercicioDiario"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelOpcaoExercicioDiario"
            style="@style/ButtonPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutControleSono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutOpcaoExercicioDiario">

        <Button
            android:id="@+id/btnControleSono"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelControleSono"
            style="@style/ButtonPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutProgramacaoSemanalExercicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutControleSono">

        <Button
            android:id="@+id/btnProgramacaoSemanalExercicio"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelProgramacaoSemanalExercicios"
            style="@style/ButtonPrimary" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutPerfilUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProgramacaoSemanalExercicio">

        <Button
            android:id="@+id/btnPerfilUsuario"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:insetLeft="8dp"
            android:insetRight="8dp"
            android:layout_margin="8dp"
            android:text="@string/labelPerfilUsuario"
            style="@style/ButtonPrimary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
